# rust-grpc-starter

./: .gitignore  README.md
prg-01-hello_gRPC/: Cargo.toml  build.rs
prg-01-hello_gRPC/proto/: hello_grpc.proto
prg-01-hello_gRPC/src/: client.rs  hello_grpc.rs  hello_grpc_pb2.rs  hello_grpc_pb2_grpc.rs  lib.rs  server.rs
prg-02-bidirectional-streaming/: Cargo.toml  build.rs
prg-02-bidirectional-streaming/proto/: bidirectional.proto
prg-02-bidirectional-streaming/src/: bidirectional_pb2.rs  bidirectional_pb2_grpc.rs  client.rs  lib.rs  server.rs
prg-03-clientstreaming/: Cargo.toml  build.rs
prg-03-clientstreaming/src/: client.rs  clientstreaming_pb2.rs  clientstreaming_pb2_grpc.rs  lib.rs  server.rs
prg-04-serverstreaming/: Cargo.toml  build.rs
prg-04-serverstreaming/proto/: serverstreaming.proto
prg-04-serverstreaming/src/: client.rs  lib.rs  server.rs  serverstreaming_pb2.rs  serverstreaming_pb2_grpc.rs
