[package]
name = "prg-04-serverstreaming"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3"
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

